[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sectools"
version = "1.1.8"
requires-python = ">=3.9"
dependencies = ["rich", "inquirerpy", "fpdf2", "cryptography"]

[project.scripts]
sectool = "sectools.cli:main"
start = "sectools.main:main"

[tool.setuptools.packages.find]
where = ["src"]
