[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sectools"
version = "2.1.0"
requires-python = ">=3.9"
dependencies = ["rich", "inquirerpy", "fpdf2", "cryptography"]

[project.scripts]
sectool = "sectools.cli:main"
start = "sectools.main:main"

[tool.setuptools.packages.find]
where = ["src"]
