[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sectools"
version = "2.1.0"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0,<14",
    "inquirerpy>=0.3.4,<1",
    "fpdf2>=2.7,<3",
    "cryptography>=41.0,<44",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9", "pytest-cov>=4.0"]

[project.scripts]
sectool = "sectools.cli:main"
start = "sectools.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
